[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Shapes/X.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/pop.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/art/bg.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 510, 300 )

[sub_resource type="Theme" id=2]

[node name="Main" type="Area2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 511.5, 301 )
shape = SubResource( 1 )

[node name="ShapeTimer" type="Timer" parent="."]
autostart = true

[node name="X" parent="." instance=ExtResource( 2 )]
position = Vector2( 513, 488 )
gravity_scale = 3.0
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.0

[node name="ShapeSpawnPoint" type="Position2D" parent="."]
position = Vector2( 514, 488 )

[node name="SpawnPop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510, 300 )
texture = ExtResource( 5 )

[node name="Score Label" type="Label" parent="."]
margin_left = 56.0
margin_top = 40.0
margin_right = 228.0
margin_bottom = 110.0
theme = SubResource( 2 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 56.0
margin_top = 64.0
margin_right = 228.0
margin_bottom = 134.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.1, 3.1 )

[connection signal="timeout" from="ShapeTimer" to="X" method="_on_ShapeTimer_timeout"]
[connection signal="spawn_shape" from="X" to="." method="_on_X_spawn_shape"]
